Add avatar, add header and footer components

--- a/content/1.index.md
+++ b/content/1.index.md
@@ -5,20 +5,9 @@ description: I ❤️ serverless, event-driven, dev communities, and creative co
 title: Home
 ---
 
-::hero
----
-image: '/alpine-0.webp'
----
-#title
 👋 Hi, I am Marc Duiker.
-#description
+
 This website is heavily under construction. Please come back later.
 
-::gallery
----
-images:
-  - /alpine-0.webp
-  - /alpine-1.webp
-  - /alpine-2.webp
----
-::
+![](/marcduiker.gif)
+
