Hide template articles

--- a/content/1.index.md
+++ b/content/1.index.md
@@ -5,9 +5,9 @@ description: I ❤️ serverless, event-driven, dev communities, and creative co
 title: Home
 ---
 
-👋 Hi, I am Marc Duiker.
+# 👋 Hi, I am Marc Duiker.
 
 This website is heavily under construction. Please come back later.
 
-![](/marcduiker.gif)
+![Marc Duiker pixelart avatar](/marcduiker.gif)
 
