--- a/content/1.index.md
+++ b/content/1.index.md
@@ -7,7 +7,7 @@ title: Home
 
 # 👋 Hi, I am Marc Duiker.
 
-This website is heavily under construction. Please come back later.
+This website is heavily under construction 👷‍♀️🏗️. Please come back later.
 
-![Marc Duiker pixelart avatar](/marcduiker.gif)
+![Marc Duiker pixelart avatar](/marcduiker_hardhat.gif)
 
