--- a/content/3.links.md
+++ b/content/3.links.md
@@ -5,8 +5,11 @@ layout: 'default'
 
 # Connect with me on the web
 
-- [Twitter](https://twitter.com/marcduiker)
-- [Mastodon](https://mstdn.social/@marcduiker)
-- [LinkedIn](https://www.linkedin.com/in/marcduiker/)
-- [GitHub](https://www.github.com/marcduiker)
-- [Ko-fi](https://ko-fi.com/marcduiker)
+- [Follow me on Twitter](https://twitter.com/marcduiker)
+- [Follow me on Mastodon](https://mstdn.social/@marcduiker)
+- [Follow me on YouTube](https://www.youtube.com/@marcduiker)
+- [Follow me on dev.to](https://dev.to/marcduiker)
+- [Follow me on Polywork](https://www.polywork.com/marcduiker)
+- [Connect with me on LinkedIn](https://www.linkedin.com/in/marcduiker/)
+- [Have a look at my open source projects on GitHub](https://www.github.com/marcduiker)
+- [Sponsor my pixelart or commission me via Ko-fi](https://ko-fi.com/marcduiker)
