--- a/content/articles/1.the-importance-of-good-unit-tests-and-reviews.md
+++ b/content/articles/1.the-importance-of-good-unit-tests-and-reviews.md
@@ -1,5 +1,5 @@
 ---
-cover: /articles/goto.png
+cover: /articles/2013/1.goto.png
 author:
   name: Marc Duiker
   avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
@@ -12,7 +12,7 @@ layout: article
 
 # The Importance of Good Unit Tests and Test Reviews
 
-![XKCD Goto](/articles/goto.png)
+![XKCD Goto](/articles/2013/1.goto.png)
 *Cover credit: [XKCD](https://xkcd.com/292/)*
 
 I'm currently following an [online TDD course](https://www.udemy.com/draft/14162/) by [Roy Osherove](http://osherove.com/). I'm about half way through and although I have quite a bit of experience writing unit tests and using test frameworks I've gained a lot of knowledge from the course already. Here are some highlights about good unit tests and test reviews.
