--- a/content/articles/2.visual-studio-snippets-for-unit-test-methods.md
+++ b/content/articles/2.visual-studio-snippets-for-unit-test-methods.md
@@ -1,5 +1,5 @@
 ---
-cover: /articles/2013/2.1_unit_test_snippet.png
+cover: /articles/2013/2.1.unit_test_snippet.png
 author:
   name: Marc Duiker
   avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
@@ -10,7 +10,7 @@ description: Use Visual Studio code snippets to quickly scaffold your unit test 
 layout: article
 ---
 
-![NUnit test snippet](/articles/2013/2.1_unit_test_snippet.png)
+![NUnit test snippet](/articles/2013/2.1.unit_test_snippet.png)
 
 ## Unit Test Method Naming
 As mentioned in a previous post, having a clear naming convention for unit test methods is important to keep tests readable and maintainable. Sticking to the convention might be difficult at first and require some discipline but is definitely worth it in the long run.
@@ -30,17 +30,17 @@ The resulting code is displayed at the top of this post. The snippets use three 
 ### Importing Snippets
 Once you've downloaded the snippet(s) open Visual Studio and go to _Tools > Code Snippets Manager_.
 
-![Code snippets manager](/articles/2013/2.2_code_snippets_manager.png)
+![Code snippets manager](/articles/2013/2.2.code_snippets_manager.png)
 
 (If you open the Test folder you see two test related snippets already exist. These are `testc` for an MSTest class and `testm` for an MSTest method. The snippets do not use the suggested naming convention though.)
 
 Click the _Import..._ button, select the downloaded snippets and click _Open_. Then select the location to store the snippets (the Test folder seems obvious ;).
 
-![Import code snippets](/articles/2013/2.3_import_code_snippet.png)
+![Import code snippets](/articles/2013/2.3.import_code_snippet.png)
 
 Click _Finish_ and the snippets are ready to be used. To verify that they are installed or to find out which shortcut they use open the _Code Snippets Manager_ and select the snippet.
 
-![Check code snippet](/articles/2013/2.4_check_code_snippet.png)
+![Check code snippet](/articles/2013/2.4.check_code_snippet.png)
 
 Reducing some boiler plate coding is always a good thing and I hope you'll find these snippets convenient.
 
