--- a/content/articles/3.presentations-for-programmers.md
+++ b/content/articles/3.presentations-for-programmers.md
@@ -1,5 +1,5 @@
 ---
-cover: /articles/2013/3.1_presentations_for_programmers.png
+cover: /articles/2013/3.1.presentations_for_programmers.png
 author:
   name: Marc Duiker
   avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
@@ -10,7 +10,7 @@ description: Tools and tips how to create great presentations for programmers.
 layout: article
 ---
 
-![Presentations for programmers](/articles/2013/3.1_presentations_for_programmers.png)
+![Presentations for programmers](/articles/2013/3.1.presentations_for_programmers.png)
 
 ## Great Slides + Great Speaker = Great Presentation
 
@@ -29,7 +29,7 @@ Next I tried [Prezi](http://prezi.com/) for a while. Initially I was really blow
 ### HTML5
 And now there is [HTML5](https://developer.mozilla.org/en/docs/HTML/HTML5). And I love it. A lot of HTML5 presentation frameworks are emerging and currently I'm experimenting with [reveal.js](http://lab.hakim.se/reveal-js/#/) (written by [Hakim El Hattab](http://hakim.se/)). Really have a go at this one if you haven't seen it yet!
 
-[![Reveal.js](/articles/2013/3.2_reveal.png)](https://revealjs.com/)
+[![Reveal.js](/articles/2013/3.2.reveal.png)](https://revealjs.com/)
 
 An HTML5 presentation framework is just a collection of html, css and javascript files which you have complete control over (yay!). You can tweak the markup, styles and functions as desired. That immediately is also the downside for people who don't have any web development skills (but they should stick to PowerPoint anyway ;). You need to know a bit of html to get started (although reveal.js has an online editor called [slides.com](http://slides.com/)). The presentation can be used either online or offline, it all works the same, only an up-to-date browser is required (I prefer Chrome).
 
