--- a/content/articles/4.sitecore-introduction-for-developers.md
+++ b/content/articles/4.sitecore-introduction-for-developers.md
@@ -1,5 +1,5 @@
 ---
-cover: /articles/2013/4.1_sitecore_intro.png
+cover: /articles/2013/4.1.sitecore_intro.png
 author:
   name: Marc Duiker
   avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
@@ -10,7 +10,7 @@ description:
 layout: article
 ---
 
-![](/articles/2013/4.1_sitecore_intro.png)
+![](/articles/2013/4.1.sitecore_intro.png)
 
 ## TechTalk
 
