Add 2015 blog posts

--- a/content/articles/12.moving-my-blog-i-love-github-and-markdown.md
+++ b/content/articles/12.moving-my-blog-i-love-github-and-markdown.md
@@ -1,10 +1,16 @@
 ---
-layout: post
-title: "Moving my blog - I <3 Github &amp; Markdown"
-tags: Github markdown Jekyll
+cover: /articles/2015/12.successkid_blog.jpg
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2015-10-06
+title: "Moving my blog - I ❤️ Github & Markdown"
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" src="{{ site.url }}/assets/2015/10/06/successkid-blog.jpg" alt="Moved blog to Github, writing posts in markdown.">
+!["Moved blog to Github, writing posts in markdown.](/articles/2015/12.successkid_blog.jpg)
 
 ## The blogging experience
 
@@ -13,8 +19,6 @@ Blogging should be hassle free. With my old blog platform, blogging was far from
 Party this was due because I deviated from the built-in themes and I hacked something custom into it. I always needed to manipulate the html of a post because the paragraphs tags and white space were off... very annoying. 
 
 And when blogging gets tedious because of such things you blog less and less. It's been almost a year since I posted anything, which is of course unacceptable ;).
-
-<!--more-->
 
 ## Moved!
 So, it was time for desperate measures and I decided to move my blog to Github.
@@ -31,7 +35,7 @@ Don't be fooled with the term 'static site'. It certainly does not mean you have
 I used [Visual Studio Code](https://code.visualstudio.com/) to create the html components.
 
 #### Content: Markdown
-Now comes the part which I'm most content with (pun intended). Jekyll supports [Markdown](http://daringfireball.net/projects/markdown/) as the format for the blog posts. I __so__ like this format because of it's ease of use and minimalism.
+Now comes the part which I'm most content with (pun intended). Jekyll supports [Markdown](http://daringfireball.net/projects/markdown/) as the format for the blog posts. I **so** like this format because of it's ease of use and minimalism.
 
 #### Responsive design &amp; style: Skeleton
 Since I didn't choose one of the default Github Pages templates the blog looked very 90's with only a plain Times New Roman font. That needed to change but I do like a very minimalistic style.
@@ -51,9 +55,9 @@ Now the blog looks good again and writing posts has become much simpler and more
 - When I finish the post I save it in the `_posts` folder. All markdown files in this folder will be publicly visible.
 - I commit &amp; push the post (and relevant assets) to the remote repository.
 
-__And that's all there is.__
+**And that's all there is.**
 
-_Note: I only use MarkdownPad2 for editing and previewing the blog post content. Because I'm not running Jekyll on my local machine I can't see a fully rendered page before actually pushing it online. Since it's so quick to make a change and seeing the rendered result online I'm fine with this approach._
+> Note: I only use MarkdownPad2 for editing and previewing the blog post content. Because I'm not running Jekyll on my local machine I can't see a fully rendered page before actually pushing it online. Since it's so quick to make a change and seeing the rendered result online I'm fine with this approach.
 
 
 ### Why do blogging like this
@@ -62,4 +66,3 @@ The workflow and tooling involved feel very natural if you're a developer. I als
 So if you're a developer who is either not blogging or want to switch to another blogging platform really have a look at [Github Pages](https://pages.github.com/).
 
 Expect some new Sitecore related posts from me soon! :)
-
