--- a/content/articles/13.choosing-communication-tools-for-distributed-teams.md
+++ b/content/articles/13.choosing-communication-tools-for-distributed-teams.md
@@ -1,21 +1,23 @@
 ---
-layout: post
+cover: /articles/2015/13.slack_home.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2015-10-14
 title: "Choosing communication tools for distributed teams"
-tags: communication team tools
+description:
+layout: article
 ---
 
-<a href="https://slack.com" target="_blank">
-  <img class="u-max-full-width" src="{{ site.url }}/assets/2015/10/14/slack_home.png" alt="Slack">
-</a>
+![Slack](/articles/2015/13.slack_home.png)
 
 ## Team communication
 My work at [Tahzoo](http://www.tahzoo.com) and the work I do for the [Dutch Sitecore user group](http://www.sugnl.net) require me to do a lot of communication in distributed teams.
 Effective and clear communication is difficult, even more so when the team members are at different locations. Having the right tools in place helps a lot.
 Since there are so many communication tools out there I want to share my opinion on some of these so perhaps you can make a more informed judgment when deciding which tools to use.
 
-<!--more-->
-
-__Go straight to the [TL;DR](#tldr)__
+__Go straight to the [TLDR](#tldr-my-choice-of-tooling)__
 
 ### Types of communication
 There are various types of communication I do during the day:
@@ -87,7 +89,7 @@ I use [Google Hangouts](https://hangouts.google.com/) frequently for video confe
 
 Besides the web interface Hangouts is available for Android, iOS and as [Chrome extension](https://chrome.google.com/webstore/detail/google-hangouts/knipolnnllmklapflnccelgolnpehhpl?hl=en).
 
-## <a name="tldr"></a>TL;DR - My choice of tooling
+## TLDR - My choice of tooling
 
 _There is simply not just one tool that can supports everything well. So pick the right tool for the right job._
 
