--- a/content/articles/14.ruling-the-continuous-integration-seas-with-sitecore-ship-part-1.md
+++ b/content/articles/14.ruling-the-continuous-integration-seas-with-sitecore-ship-part-1.md
@@ -1,17 +1,21 @@
 ---
-layout: post
+cover: /articles/2015/14.1.picard_packages.jpg
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2015-10-21
 title: "Ruling the continuous integration seas with Sitecore.Ship - Part 1"
-tags: Sitecore Ship continuous integration deployment
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" src="{{ site.url }}/assets/2015/10/21/picard_packages.jpg" alt="Why the hell are you deploying Sitecore packages manually?">
+![Why the hell are you deploying Sitecore packages manually?](/articles/2015/14.1.picard_packages.jpg)
 
 ## Deploying Sitecore items
 All software development projects that involve Sitecore are faced with the same problem: 
 how to get the Sitecore items (templates, layouts or content) from development to the 
 other environments in a consistent way.
-
-<!--more-->
 
 ### Tedious and error prone: manual deployment o_O
 During my first couple of Sitecore projects the packaging and deployment of Sitecore items 
@@ -57,11 +61,11 @@ Let's have a look what's in the NuGet packages of the 0.4.0 pre-release version 
 
 This is the contents of the Sitecore.Ship package:
 
-<img class="u-max-full-width" src="{{ site.url }}/assets/2015/10/21/ship_nancy_nuget.png" alt="Sitecore.Ship NuGet package">
+![Sitecore.Ship NuGet package](/articles/2015/14.2.ship_nancy_nuget.png)
 
 This is the contents of the Sitecore.Ship.AspNet package:
 
-<img class="u-max-full-width" src="{{ site.url }}/assets/2015/10/21/ship_aspnet_nuget.png" alt="Sitecore.Ship.ASpNet NuGet package">
+![Sitecore.Ship.AspNet NuGet package](/articles/2015/14.3.ship_aspnet_nuget.png)
 
 The assemblies involved are:
 
@@ -74,4 +78,4 @@ Once the website files are deployed you can issue a POST request to `<website>/s
 Or do a smart publish by doing a POST to `<website>/services/publish/smart`. 
 As usual though the devil in the details and while the [wiki page](https://github.com/kevinobee/Sitecore.Ship/wiki) gives some basic guidance how to start using Sitecore.Ship it is not a complete end-to-end guide how to integrate it in your solution.
 
-In [the next blog post]({{ site.url }}/2015/10/31/ruling-the-continuous-integration-seas-with-sitecore-ship-part-2.html) I will explain in detail how I'm using Sitecore.Ship with [Powershell](https://msdn.microsoft.com/en-us/mt173057.aspx) and [cURL](http://curl.haxx.se/) in continuous integration setups with tools like Visual Studio Release Management or Octopus Deploy.
+In [the next blog post](/articles/ruling-the-continuous-integration-seas-with-sitecore-ship-part-2) I will explain in detail how I'm using Sitecore.Ship with [Powershell](https://learn.microsoft.com/powershell/) and [cURL](http://curl.haxx.se/) in continuous integration setups with tools like Visual Studio Release Management or Octopus Deploy.
