--- a/content/articles/15.ruling-the-continuous-integration-seas-with-sitecore-ship-part-2.md
+++ b/content/articles/15.ruling-the-continuous-integration-seas-with-sitecore-ship-part-2.md
@@ -1,17 +1,21 @@
 ---
-layout: post
+cover: /articles/2015/15.1.one-does-not-simply-make-a-proper-http-request.jpg
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2015-10-31
 title: "Ruling the continuous integration seas with Sitecore.Ship - Part 2: fileupload"
-tags: Sitecore Ship continuous integration deployment
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" src="{{ site.url }}/assets/2015/10/31/one-does-not-simply-make-a-proper-http-request.jpg" alt="One does not simply make a proper http request.">
+![One does not simply make a proper http request](/articles/2015/15.1.one-does-not-simply-make-a-proper-http-request.jpg)
 
 ## Deploying Sitecore items with Sitecore.Ship
 
-As I mentioned in the [previous post]({{ site.url }}/2015/10/21/ruling-the-continuous-integration-seas-with-sitecore-ship-part-1.html) 
+As I mentioned in the [previous post](/articles/ruling-the-continuous-integration-seas-with-sitecore-ship-part-1) 
 Sitecore.Ship can be used to install Sitecore `update` or `zip` packages by posting HTTP requests to the Sitecore site.
-
-<!--more-->
 
 ### Configuration
 
@@ -42,11 +46,11 @@ which I'm using here.
 
 - Once you've started Postman you'll see this screen: 
 
-  <img class="u-max-full-width" src="{{ site.url }}/assets/2015/10/31/postman_start.png" alt="Postman startup screen">
+  ![Postman startup screen](/articles/2015/15.2.postman_start.png)
 
 - Change the following fields to do a post request to upload and install a package:
 
-  <img class="u-max-full-width" src="{{ site.url }}/assets/2015/10/31/postman_data.png" alt="Postman fileupload post request">
+  ![Postman fileupload post request](/articles/2015/15.3.postman_data.png)
   
 - Note that the value of the _Key_ parameter (`path` in this example) is actually irrelevant, it can be any value.
 - Once the value type is set to `File` an _Open file_ dialog can be used to select the file to upload.
@@ -54,24 +58,22 @@ which I'm using here.
 - Now press the blue Send button to do the post request. 
 If everything went well output shows the Sitecore IDs and path of the items that were in the package and have been installed: 
 
-  <img class="u-max-full-width" src="{{ site.url }}/assets/2015/10/31/postman_result.png" alt="Postman fileupload response">
+  ![Postman fileupload response](/articles/2015/15.4.postman_result.png)
 
 So far so good, but we don't want to use Postman manually in order to upload and install packages for every deployment right?
 We need a solution that can be automated and used in a continuous integration setup. 
 
 #### cURL
-I first looked into PowerShell and the `Invoke-RestMethod` command but it appeared that OOTB this method does not support 
-multipart form data, which is required to call the `fileupload` command.
-There is [a workaround](http://stackoverflow.com/a/25083745/112544) to create the required multipart boundaries
-in the request but I did not like this approach. I looked for another solution and found cURL.
+I first looked into PowerShell and the `Invoke-RestMethod` command but it appeared that OOTB this method does not support multipart form data, which is required to call the `fileupload` command.
+There is [a workaround](http://stackoverflow.com/a/25083745/112544) to create the required multipart boundaries in the request but I did not like this approach. I looked for another solution and found cURL.
 
 [cURL](http://curl.haxx.se/) is a very powerful commandline application to script HTTP jobs. 
 Getting the syntax right can be a little tricky although there is quite some [documentation](http://curl.haxx.se/docs/httpscripting.html).
 Luckily Postman can generate various scripts including one for cURL:
 
-<img class="u-max-full-width" src="{{ site.url }}/assets/2015/10/31/postman_generate.png" alt="Postman generate code">
+![Postman generate code](/articles/2015/15.5.postman_generate.png)
 
-<img class="u-max-full-width" src="{{ site.url }}/assets/2015/10/31/postman_curl.png" alt="Postman cURL code">
+![Postman cURL code](/articles/2015/15.6.postman_curl.png)
 
 However the cURL script in the screenshot above contains a lot of unncessesary statements and actually gives errors.
 I've found that this is the minimal cURL syntax which works for me:
@@ -88,11 +90,66 @@ I actually prefer to use the more verbose cURL syntax (e.g. `--form` instead of 
 of the script is much more clear to the reader who might not know the syntax well. 
 A full description of the parameters can be found in the [cURL manual](http://curl.haxx.se/docs/manpage.html).
 
-{% gist 6e3ada7efad84dc418b7 %}
+**deploy-sitecorepackage.ps1**
+
+```powershell
+<#
+    This function uploads & installs the specified Sitecore update package to the given $SiteUrl.
+    It uses cURL (http://curl.haxx.se/) to post a request to a Sitecore website which has Sitecore Ship installed.
+
+    Example usage: 
+    .\deploy-sitecorepackage.ps1 mysite.dev "C:\Project\Build\Artifacts\1-mysite-templates.update" 60 300
+#>
+
+Param(
+    [Parameter(Position=0, Mandatory=$true)]
+    [string]$SiteUrl,
+    [Parameter(Position=1, Mandatory=$true)]
+    [string]$UpdatePackagePath,
+    [Parameter(Position=2)]
+    [ValidateRange(0, 99999)]
+    [int]$ConnectionTimeOutInSeconds = 300,
+    [Parameter(Position=3)]
+    [ValidateRange(0, 99999)]
+    [int]$MaxTimeOutInSeconds = 900
+)
+
+$fileUploadUrl = "$SiteUrl/services/package/install/fileupload"
+$curlPath = .\get-curlpath.ps1
+$curlCommand= "$curlPath --show-error --silent --connect-timeout $ConnectionTimeOutInSeconds --max-time $MaxTimeOutInSeconds --form ""filename=@$UpdatePackagePath"" $fileUploadUrl"
+
+Write-Output "INFO: Starting Invoke-Expression: $curlCommand"
+
+Invoke-Expression $curlCommand
+```
 
 The _deploy-sitecorepackage.ps1_ script uses another script called _get-curlpath.ps1_ to obtain the path to the cURL executable.
 
-{% gist 345f5aa6e0e55accb81b %}
+**get-curlpath.ps1**
+  
+```powershell
+<# 
+    This script returns the full path of the curl.exe.
+#>
+
+$curlExe = 'curl.exe'
+$curlPath = Resolve-Path "$PSScriptRoot\..\tools\curl-7.33.0-win64-nossl\$curlExe" # This is the path on the local dev machine.
+if (-not (Test-Path $curlPath))
+{
+    # Fall-back to use curl.exe located in the same location as the script.
+    if (Test-Path "$PSScriptRoot\$curlExe")
+    {
+        $curlPath = "$PSScriptRoot\$curlExe"
+    }
+    else
+    {
+        Write-Error "ERROR: $curlPath not found."
+        Exit
+    }
+}
+
+$curlPath
+```
 
 These PowerShell scripts can now easily be used in continuous integration & delivery tools such as Octopus Deploy or Microsoft Release Management.
 
