Update home page

--- a/content/1.index.md
+++ b/content/1.index.md
@@ -7,7 +7,12 @@ title: Home
 
 # 👋 Hi, I am Marc Duiker.
 
-This website is heavily under construction 👷‍♀️🏗️. Please come back later... or don't :shrug:.
+This website is heavily under construction 👷‍♀️🏗️. 
+
+I'm changing it from a 100+ microservice architecture to a single monolith 😜.
+
+(I'm still migrating all my old blog posts. 
+Please come back later... or don't :shrug:.)
 
 ![Marc Duiker pixelart avatar](/marcduiker_hardhat.gif)
 
